--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -1,28 +1,30 @@
-<ul class="sidebar navbar-nav toggled">
+<ul class="sidebar position-static navbar-nav toggled">
     <li class="nav-item active">
         <a class="nav-link" href="index.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Menu</span>
         </a>
     </li>
-    <li class="nav-item dropdown">
+    <li class="nav-item active dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-fw fa-folder"></i>
             <span>Seguimiento</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Opciones:</h6>
+            <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
             <a class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
+            <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
         </div>
     </li>
     <!-- <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-chart-area"></i>
-                <span>Charts</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="tables.html">
-                <i class="fas fa-fw fa-table"></i>
-                <span>Tables</span></a>
-        </li> -->
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Charts</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="tables.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Tables</span></a>
+            </li> -->
 </ul>
