--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -15,6 +15,7 @@
             <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
             <a class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
             <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
+            <a class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
         </div>
     </li>
     <!-- <li class="nav-item">
