--- a/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
+++ b/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
@@ -1,58 +1,54 @@
 <div class="row">
+
     <div class="col-md-3">
         <div class="ibox float-e-margins">
             <div class="ibox-content">
                 <div class="file-manager">
-                    <h5>Show:</h5>
-                    <a href="#" class="file-control active">Ale</a>
-                    <a href="#" class="file-control">Documents</a>
-                    <a href="#" class="file-control">Audio</a>
-                    <a href="#" class="file-control">Images</a>
+                    <h5>Documentos</h5>
+                   
                     <div class="hr-line-dashed"></div>
-                    <button class="btn btn-primary btn-block">Upload Files</button>
+                    <button class="btn btn-primary btn-block">Subir archivo</button>
                     <div class="hr-line-dashed"></div>
-                    <h5>Folders</h5>
+                    <h5>Carpetas</h5>
                     <ul class="folder-list" style="padding: 0">
-                        <li><a href=""><i class="fa fa-folder"></i> Files</a></li>
-                        <li><a href=""><i class="fa fa-folder"></i> Pictures</a></li>
-                        <li><a href=""><i class="fa fa-folder"></i> Web pages</a></li>
-                        <li><a href=""><i class="fa fa-folder"></i> Illustrations</a></li>
-                        <li><a href=""><i class="fa fa-folder"></i> Films</a></li>
-                        <li><a href=""><i class="fa fa-folder"></i> Books</a></li>
+                        <li><a href=""><i class="fa fa-folder"></i> No revisados</a></li>
+                        <li><a href=""><i class="fa fa-folder"></i> Con comentarios</a></li>
+                        <li><a href=""><i class="fa fa-folder"></i> En revision</a></li>
+                        <li><a href=""><i class="fa fa-folder"></i> Revisados</a></li>
+                       
                     </ul>
-                    <h5 class="tag-title">Tags</h5>
-                    <ul class="tag-list" style="padding: 0">
-                        <li><a href="">Family</a></li>
-                        <li><a href="">Work</a></li>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Children</a></li>
-                        <li><a href="">Holidays</a></li>
-                        <li><a href="">Music</a></li>
-                        <li><a href="">Photography</a></li>
-                        <li><a href="">Film</a></li>
-                    </ul>
+                
                     <div class="clearfix"></div>
                 </div>
             </div>
         </div>
     </div>
-<div *ngFor="let file of files">
-    <div class="col-md-9 animated fadeInRight" >
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="file-box">
-                    <div class="file">
-                        <a href="#">
-                            <span class="corner"></span>
 
-                            <div class="icon">
-                                <i class="fa fa-file"></i>
-                            </div>
-                            <div class="file-name">
-                                    {{file}}
-                            </div>
-                        </a>
+  
+        <div class="col-md-9 animated fadeInRight" >
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="file-box" *ngFor="let file of files">
+                        <div class="file">
+                                <span class="corner"></span>
+                            
+
+                                <div class="icon">
+                                    <i class="fa fa-file"></i>
+                                </div>
+                                <div class="file-name">
+                                        {{file}}
+                                        <td style="text-align:center;cursor: pointer;" (click)="downloadFile(file)">
+                                                <i class="fa fa-download"></i></td>
+                                        <!-- <td style="text-align:center;cursor: pointer;" (click)="deleteFile(file)">
+                                                <i class="fa fa-delete">Eliminar</i></td> -->
+                                </div>
+                                
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+ 
+
 </div>
