--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -1,21 +1,16 @@
 <ul class="sidebar position-static navbar-nav toggled">
-    <li class="nav-item active">
-        <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Menu</span>
-        </a>
-    </li>
+ 
     <li class="nav-item active dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-fw fa-folder"></i>
-            <span>Seguimiento</span>
+            <span>Paginas</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <h6 class="dropdown-header">Opciones:</h6>
-            <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
+            <h6 class="dropdown-header">Paginas:</h6>
+            <a class="dropdown-item" [routerLink]="['/user']">Perfil</a>
             <a class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
-            <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
             <a class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
+            <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
         </div>
     </li>
     <!-- <li class="nav-item">
