--- a/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
+++ b/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
@@ -1,24 +1,75 @@
 
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-    <div class="form-group">
-        <label for="exampleInputEmail1">Paso 1: Entrega de carta de Aceptacion</label>
-        <form method="post" action="#" id="#">
-            <div class="form-group files" (change)="handleFileInput($event.target.files)">
-                <input type="file" class="form-control" multiple="">
-            </div>
-        </form>
+    <div class="card">
+                <div class="card-header">
+                    <h5> Seguimiento</h5>
+                </div>
+    <div class="card-body">
+         <div class="row">
+            <div class="col-md-6">
 
-        
-    <div class="form-group">
-        <label for="exampleInputEmail1">Paso 2: Entrega de Anteproyecto</label>
-        <form method="post" action="#" id="#">
-            <div class="form-group files" (change)="handleFileInput($event.target.files)">
-                <input type="file" class="form-control" multiple="">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Paso 1: Entrega de carta de Aceptacion</label>
+                        
+                            <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                <input type="file" class="form-control" multiple="">
+                            </div>
+                    </div>
+
+            
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Paso 2: Entrega de Anteproyecto</label>
+                       
+                            <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                <input type="file" class="form-control" multiple="">
+                            </div>
+                    </div>
+
+                    
+                    <div class="form-group">
+                            <label for="exampleInputEmail1">Primer reporte</label>
+                           
+                                <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                    <input type="file" class="form-control" multiple="">
+                                </div>
+                        </div>
+
+                        <div class="form-group">
+                                <label for="exampleInputEmail1">Segundo reporte</label>
+                               
+                                    <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                        <input type="file" class="form-control" multiple="">
+                                    </div>
+                        </div>
+
+                        <div class="form-group">
+                                <label for="exampleInputEmail1">Tercer reporte</label>
+                                   
+                                 <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                      <input type="file" class="form-control" multiple="">
+                                </div>
+                        </div>
+
+                        <div class="form-group">
+                                <label for="exampleInputEmail1">Evaluacion de seguimiento de residencia</label>
+                                   
+                                 <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                      <input type="file" class="form-control" multiple="">
+                                </div>
+                        </div>
+                        
+                        <div class="form-group">
+                                <label for="exampleInputEmail1">Evaluacion de reporte de residencia</label>
+                                   
+                                 <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                      <input type="file" class="form-control" multiple="">
+                                </div>
+                        </div>
+                 </div>
             </div>
-        </form>
-  </div>
+         </div>
+
+    </div>
 </div>
-</div>
+
