--- a/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
@@ -13,15 +13,15 @@
     </div>
     <div class="card" style="width: 400px;">
         <div class="card-body">
-            <form>
+            <form id="form1" name="form1" #form="ngForm">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Usuario</label>
-                    <input type="text" [(ngModel)]="user.UserName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="text" [(ngModel)]="user.userName" name="userName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <!--  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Contraseña</label>
-                    <input type="password" [(ngModel)]="user.Password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" [(ngModel)]="user.password" name="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <!-- <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
