[ADD] Update login, project subscription

--- a/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
+++ b/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
@@ -38,7 +38,7 @@
                                 <td>{{project.direccion_empre}}</td>
                                 <td>{{project.carrera}}</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary">Suscribirse</button>
+                                    <button type="button" class="btn btn-secondary" (click)="projectSubscription(project)">Suscribirse</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <form method="post" action="#" id="#">
@@ -58,5 +58,5 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
