--- a/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
@@ -13,6 +13,9 @@
     </div>
     <div class="card" style="width: 400px;">
         <div class="card-body">
+            <div class="alert alert-danger" *ngIf="isUnauthorized" role="alert">
+                Las credenciales no son correctas
+            </div>
             <form id="form1" name="form1" #form="ngForm">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Usuario</label>
