--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Opciones:</h6>
             <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
-            <a class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
+            <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
             <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
         </div>
     </li>
