--- a/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
@@ -15,7 +15,7 @@
                         <div class="col-sm" *ngIf="activeProject">
                             <div class="text-right">
                                 <div class="font-weight-bold">
-                                    Segimiento activo <button type="button" class="btn btn-link">Resource Management</button>
+                                    Segimiento activo <button type="button" class="btn btn-link" [routerLink]="['/seguimiento']">Resource Management</button>
                                 </div>
                                 <!--   <div class="row">
                                     <div class="col-sm">
