[ADD] file manager

--- a/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
+++ b/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
@@ -14,7 +14,7 @@
                             <input type="file" class="form-control" multiple="">
                         </div>
 
-                        <button (click)="onUploadFiles();">
+                        <button (click)="uploadFiles();">
                                 Subir documento
                             </button>
                     </div>
