--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Opciones:</h6>
             <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
-            <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
+            <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
             <h6 class="dropdown-header">Paginas:</h6>
             <a class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
             <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
