--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
             <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
             <h6 class="dropdown-header">Paginas:</h6>
             <a class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
-            <a class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
+            <a *ngIf="user === 'asesor'" class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
         </div>
     </li>
     <!-- <li class="nav-item">
