--- a/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
+++ b/InfoTecFrontEnd/src/app/pages/seguimiento/seguimiento.component.html
@@ -7,16 +7,32 @@
             <div class="row">
                 <div class="col-md-6">
 
-                    <div class="form-group">
+                    <div class="form-inline">
                         <label for="exampleInputEmail1">Paso 1: Entrega de carta de Aceptacion</label>
-
-                        <div class="form-group files" (change)="handleFileInput($event.target.files)">
-                            <input type="file" class="form-control" multiple="">
+                        <div class="form-group mb-2">
+                        
+                            <div class="form-group files" (change)="handleFileInput($event.target.files)">
+                                <input type="file" class="form-control" multiple="">
+                                <button (click)="uploadFiles();">
+                                    Subir documento
+                                </button>
+                                <div class="alert alert-danger" role="alert">
+                                    No se ha enviado.
+                                 </div>
+                                <div class="alert alert-warning" role="alert">
+                                    En proceso.
+                                </div>
+                                <div class="alert alert-success" role="alert">
+                                    Se ha enviado con exito!
+                                </div>
+                               
+                               
+                            </div>
                         </div>
 
-                        <button (click)="uploadFiles();">
-                                Subir documento
-                            </button>
+                    
+
+                        
                     </div>
 
 
