--- a/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
+++ b/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
@@ -5,9 +5,41 @@
             <div class="ibox-content">
                 <div class="file-manager">
                     <h5>Documentos</h5>
-                   
-                    <div class="hr-line-dashed"></div>
-                    <button class="btn btn-primary btn-block">Subir archivo</button>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect01">Tipo Doc</label>
+                        </div>
+                        <select class="custom-select" id="inputGroupSelect01" (change)="setTipo(v.value)" #v>
+                          <option selected>Seleccione...</option>
+                          <option value="1">Carta de Aceptacion</option>
+                          <option value="2">Anteproyecto</option>
+                          <option value="3">Primer Reporte</option>
+                          <option value="4">Segundo Reporte</option>
+                          <option value="5">Tercer Reporte</option>
+                          <option value="6">Seguimiento de residencia</option>
+                          <option value="7">reporte de residencia</option>
+                        </select>
+                      </div>
+
+                      <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect02">Estado</label>
+                        </div>
+                        <select class="custom-select" id="inputGroupSelect02" (change)="setEstado(k.value)" #k>
+                          <option selected>Seleccione...</option>
+                          <option value="3">Aprobado</option>
+                          <option value="4">Rechazar</option>
+                       
+                        </select>
+                      </div>
+                    <div class="form-group files" (change)="handleFileInput($event.target.files)">
+
+                        <input type="file" class="form-control" >
+                                    <button (click)="uploadFiles(tipo,estado);">
+                                        Subir documento
+                                    </button>
+                    </div>
                     <div class="hr-line-dashed"></div>
                     <h5>Carpetas</h5>
                     <ul class="folder-list" style="padding: 0">
@@ -25,20 +57,19 @@
     </div>
 
   
-        <div class="col-md-9 animated fadeInRight" >
+        <div class="col-md-9 animated fadeInRight">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="file-box" *ngFor="let file of files">
+                    <div class="file-box" *ngFor="let file of documents">
                         <div class="file">
                                 <span class="corner"></span>
                             
-
                                 <div class="icon">
                                     <i class="fa fa-file"></i>
                                 </div>
                                 <div class="file-name">
-                                        {{file}}
-                                        <td style="text-align:center;cursor: pointer;" (click)="downloadFile(file)">
+                                        {{file.url}}
+                                        <td style="text-align:center;cursor: pointer;" (click)="downloadFile(file.url)">
                                                 <i class="fa fa-download"></i></td>
                                         <!-- <td style="text-align:center;cursor: pointer;" (click)="deleteFile(file)">
                                                 <i class="fa fa-delete">Eliminar</i></td> -->
