--- a/InfoTecFrontEnd/src/app/pages/pages.component.html
+++ b/InfoTecFrontEnd/src/app/pages/pages.component.html
@@ -1,6 +1,83 @@
-<app-navbar></app-navbar>
+<nav class="navbar navbar-expand navbar-dark bg-dark static-top ">
+    <!-- <app-navbar></app-navbar> -->
+    <a class="navbar-brand mr-1" href="index.html">InfoTec</a>
+
+    <button class="btn btn-link btn-sm text-white order-1 order-sm-0" data-toggle="collapse" id="sidebarToggle" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <i class="fas fa-bars"></i>
+  </button>
+
+    <!-- Navbar Search -->
+    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+        <!-- <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="button">
+          <i class="fas fa-search"></i>
+        </button>
+            </div>
+        </div> -->
+    </form>
+
+    <!-- Navbar -->
+    <ul class="navbar-nav ml-auto ml-md-0">
+        <li class="nav-item dropdown no-arrow mx-1">
+            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-bell fa-fw"></i>
+                <span class="badge badge-danger">9+</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown no-arrow mx-1">
+            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-envelope fa-fw"></i>
+                <span class="badge badge-danger">7</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown no-arrow">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user-circle fa-fw"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="#">Activity Log</a>
+                <div class="dropdown-divider"></div>
+                <!-- <a class="dropdown-item" href="#" data-toggle="modal" (click)="logout()" data-target="#logoutModal">Logout</a> -->
+                <app-navbar></app-navbar>
+            </div>
+        </li>
+    </ul>
+
+
+</nav>
 <div id="wrapper">
-    <app-sidebar></app-sidebar>
+    <ul class="sidebar  position-static navbar-nav" id="collapseExample">
+        <li class="nav-item active ">
+            <app-sidebar></app-sidebar>
+
+            <!--  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                        <h6 class="dropdown-item" [routerLink]="['/user']">Panel</h6>
+                        <h6 class="dropdown-item" *ngIf="user === 'alumno' || user === 'encargado'" [routerLink]="['/bank']">Banco de proyectos</h6>
+                        <h6 class="dropdown-item" *ngIf="user === 'alumno'" [routerLink]="['/seguimiento']">Seguimiento</h6>
+                        <h6 class="dropdown-item" *ngIf="user === 'asesor'" [routerLink]="['/file']">Panel de Archivos</h6>
+                         <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
+                        <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
+                        <h6 class="dropdown-header">Paginas:</h6>
+                        <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
+                        <a *ngIf="user === 'asesor'" class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
+                    </div> -->
+        </li>
+    </ul>
     <div id="content-wrapper">
         <router-outlet></router-outlet>
     </div>
