--- a/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
+++ b/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
@@ -8,7 +8,16 @@
     </ol> -->
     <div class="card">
         <div class="card-header">
-            <h5> Banco de proyecto</h5>
+            <div class="row">
+                <div class="col-sm">
+                    <h5> Banco de proyecto</h5>
+
+                </div>
+                <div class="col-sm text-right">
+                    <button type="button" class="btn btn-secondary" [routerLink]="['/createprojectobp']">Dar de alta Proyecto</button>
+                </div>
+
+            </div>
         </div>
         <div class="card-body">
             <div class="row">
@@ -24,9 +33,10 @@
                                 <th scope="col">Número de bacantes</th>
                                 <th scope="col">Lugar</th>
                                 <th scope="col">Carrera</th>
-                                <th scope="col"></th>
+                                <th scope="col" *ngIf="config.user === 'alumno'"></th>
                             </tr>
                         </thead>
+
                         <tbody>
                             <tr *ngFor="let project of projectBank">
                                 <td>{{project.nombre_proy}}</td>
@@ -37,12 +47,18 @@
                                 <td>{{project.num_vacantes}}</td>
                                 <td>{{project.direccion_empre}}</td>
                                 <td>{{project.carrera}}</td>
-                                <td>
-                                    <button type="button" class="btn btn-secondary" (click)="projectSubscription(project)">Suscribirse</button>
+                                <td *ngIf="config.user === 'alumno'">
+                                    <button *ngIf="isEnabled" type="button" class="btn btn-secondary" (click)="projectSubscription(project)">Suscribirse</button>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
+                    <p></p>
+                    <div *ngIf="spiner" class="d-flex justify-content-center">
+                        <div class="spinner-grow" style="width: 100px; height: 100px; float:inherit" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
