--- a/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
@@ -13,8 +13,11 @@
     </div>
     <div class="card" style="width: 400px;">
         <div class="card-body">
-            <div class="alert alert-danger" *ngIf="isUnauthorized" role="alert">
-                Las credenciales no son correctas
+
+            <div *ngIf="isUnauthorized" class="alert alert-warning alert-dismissible fade show" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button> Usuario o contraseña incorrecta
             </div>
             <form id="form1" name="form1" #form="ngForm">
                 <div class="form-group">
