--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -1,20 +1,35 @@
-<ul class="sidebar position-static navbar-nav toggled">
+<!-- <ul class="sidebar  position-static navbar-nav toggled"> -->
 
-    <li class="nav-item active dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Paginas</span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <h6 class="dropdown-header">Opciones:</h6>
-            <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
+<!-- <li class="nav-item active dropdown"> -->
+<a class="nav-link" [routerLink]="['/user']" href="#" id="pages1Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <!-- <i class="fas fa-fw fa-folder"></i> -->
+    <span>Panel</span>
+</a>
+<a *ngIf="user === 'encargado' || user === 'alumno' " [routerLink]="['/bank']" class="nav-link " href="#" id="pages2Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <!-- <i class="fas fa-fw fa-folder"></i> -->
+    <span>Banco de proyectos</span>
+</a>
+<a *ngIf="user === 'alumno'" [routerLink]="['/seguimiento']" class="nav-link" href="#" id="pages3Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <!-- <i class="fas fa-fw fa-folder"></i> -->
+    <span>Seguimiento</span>
+</a>
+<a *ngIf="user === 'asesor'" [routerLink]="['/file']" class="nav-link" href="#" id="pages4Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <!-- <i class="fas fa-fw fa-folder"></i> -->
+    <span>Panel de Archivos</span>
+</a>
+<!--  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <h6 class="dropdown-item" [routerLink]="['/user']">Panel</h6>
+            <h6 class="dropdown-item" *ngIf="user === 'alumno' || user === 'encargado'" [routerLink]="['/bank']">Banco de proyectos</h6>
+            <h6 class="dropdown-item" *ngIf="user === 'alumno'" [routerLink]="['/seguimiento']">Seguimiento</h6>
+            <h6 class="dropdown-item" *ngIf="user === 'asesor'" [routerLink]="['/file']">Panel de Archivos</h6>
+             <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
             <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
             <h6 class="dropdown-header">Paginas:</h6>
-            <a class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
+            <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
             <a *ngIf="user === 'asesor'" class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
-        </div>
-    </li>
-    <!-- <li class="nav-item">
+        </div> -->
+<!-- </li> -->
+<!-- <li class="nav-item">
                 <a class="nav-link" href="charts.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span></a>
@@ -24,4 +39,4 @@
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span></a>
             </li> -->
-</ul>
+<!-- </ul> -->
