Vista encargado y validacion de estatus

--- a/InfoTecFrontEnd/src/app/pages/encargado-view/encargado-view.component.html
+++ b/InfoTecFrontEnd/src/app/pages/encargado-view/encargado-view.component.html
@@ -12,10 +12,8 @@
                         </div>
                         <select class="custom-select" id="inputGroupSelect01" (change)="setTipo(v.value)" #v>
                           <option selected>Seleccione...</option>
-                          
-                          <option value="3">Primer Reporte</option>
-                          <option value="4">Segundo Reporte</option>
-                          <option value="5">Tercer Reporte</option>
+                          <option value="2">Anteproyecto</option>
+                          <option value="6">Seguimiento de residencia</option>
                           <option value="7">reporte de residencia</option>
                         </select>
                       </div>
