--- a/InfoTecFrontEnd/src/app/pages/pages.component.html
+++ b/InfoTecFrontEnd/src/app/pages/pages.component.html
@@ -61,7 +61,7 @@
 
 </nav>
 <div id="wrapper">
-    <ul class="sidebar  position-static navbar-nav" id="collapseExample">
+    <ul class="sidebar  position-static navbar-nav collapse" id="collapseExample">
         <li class="nav-item active ">
             <app-sidebar></app-sidebar>
 
