--- a/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
+++ b/InfoTecFrontEnd/src/app/pages/prject-bank/project-bank.component.html
@@ -13,7 +13,7 @@
                     <h5> Banco de proyecto</h5>
 
                 </div>
-                <div class="col-sm text-right">
+                <div *ngIf="config.user === 'Encargado de residencias'" class="col-sm text-right">
                     <button type="button" class="btn btn-secondary" [routerLink]="['/createprojectobp']">Dar de alta Proyecto</button>
                 </div>
 
@@ -33,7 +33,7 @@
                                 <th scope="col">Número de bacantes</th>
                                 <th scope="col">Lugar</th>
                                 <th scope="col">Carrera</th>
-                                <th scope="col" *ngIf="config.user === 'alumno'"></th>
+                                <th scope="col" *ngIf="config.user === 'Alumno'"></th>
                             </tr>
                         </thead>
 
@@ -47,7 +47,7 @@
                                 <td>{{project.num_vacantes}}</td>
                                 <td>{{project.direccion_empre}}</td>
                                 <td>{{project.carrera}}</td>
-                                <td *ngIf="config.user === 'alumno'">
+                                <td *ngIf="config.user === 'Alumno'">
                                     <button *ngIf="isEnabled" type="button" class="btn btn-secondary" (click)="projectSubscription(project)">Suscribirse</button>
                                 </td>
                             </tr>
