--- a/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
         <div class="col-sm-12">
-            <div class="card " style="background: #FAF6F6;">
+            <div *ngIf="config.user === 'Alumno'" class="card " style="background: #FAF6F6;">
                 <div class="card-header" style="background: white;">
                     <div class="row">
                         <div class="col-sm">
@@ -9,10 +9,10 @@
                                 Informacion de usuario
                             </h4>
                             <div>
-                                Joel Alberto Velazquez Quiñonez
+                                {{alumn.nombre}} {{alumn.apellido}}
                             </div>
                         </div>
-                        <div *ngIf="config.user === 'alumno'">
+                        <div *ngIf="config.user === 'Alumno'">
                             <div class="col-sm" *ngIf="alumn.nombreProyecto !== 'vacio' ">
                                 <div class="text-right">
                                     <div class="font-weight-bold">
@@ -32,7 +32,7 @@
                     <div *ngIf="spiner" class="spinner-grow" role="status">
                         <span class="sr-only">Loading...</span>
                     </div>
-                    <div *ngIf="config.user === 'alumno'" class="text-center ">
+                    <div *ngIf="config.user === 'Alumno'" class="text-center ">
                         <div class="row">
                             <div class="col-sm">
                                 <div class="row">
@@ -268,6 +268,176 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div *ngIf="config.user === 'Asesor'" class="card " style="background: #FAF6F6;">
+                <div class="card-header" style="background: white;">
+                    <div class="row">
+                        <div class="col-sm">
+                            <h4>
+                                Informacion de usuario
+                            </h4>
+                            <div>
+                                {{asesor.nombre}} {{asesor.apellido}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="text-center">
+                    <img src="../../../assets/images/blank_avatar.png" style="width: 18rem; background: white;" class="img-fluid border border-dark  rounded-circle" alt="...">
+
+                </div>
+                <div class="card-body align-items-center d-flex justify-content-center">
+                    <div *ngIf="spiner" class="spinner-grow" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                    <div class="text-center ">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="row">
+                                    <div class="col-sm-auto">
+                                        <div class="card " style="min-height: 350px; min-width: 370px;">
+                                            <div class="card-header" style="background: white;">
+                                                <div class="font-weight-bold">
+                                                    Informacion Escolar
+                                                </div>
+                                            </div>
+                                            <div class="card-body ">
+                                                <div class="col-sm font-weight-light">
+                                                    <div class="row">
+                                                        <div class="col-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold ">Numero de control:</div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.idAsesor}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold">Correo: </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.correo_electronico}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold">Telefono: </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.telefono}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div *ngIf="config.user === 'Encargado de residencias'" class="card " style="background: #FAF6F6;">
+                <div class="card-header" style="background: white;">
+                    <div class="row">
+                        <div class="col-sm">
+                            <h4>
+                                Informacion de usuario
+                            </h4>
+                            <div>
+                                {{encargado.nombre}} {{encargado.apellido}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="text-center">
+                    <img src="../../../assets/images/blank_avatar.png" style="width: 18rem; background: white;" class="img-fluid border border-dark  rounded-circle" alt="...">
+
+                </div>
+                <div class="card-body align-items-center d-flex justify-content-center">
+                    <div *ngIf="spiner" class="spinner-grow" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                    <div class="text-center ">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="row">
+                                    <div class="col-sm-auto">
+                                        <div class="card " style="min-height: 350px; min-width: 370px;">
+                                            <div class="card-header" style="background: white;">
+                                                <div class="font-weight-bold">
+                                                    Informacion Escolar
+                                                </div>
+                                            </div>
+                                            <div class="card-body ">
+                                                <div class="col-sm font-weight-light">
+                                                    <div class="row">
+                                                        <div class="col-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold ">Numero de control:</div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.idAsesor}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold">Correo: </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.correo_electronico}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                <div class="font-weight-bold">Telefono: </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-auto">
+                                                            <div class="text-left">
+                                                                {{asesor.telefono}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
 
