--- a/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
+++ b/InfoTecFrontEnd/src/app/pages/file-manager/file-manager.component.html
@@ -40,10 +40,16 @@
                     <div class="form-group files" (change)="handleFileInput($event.target.files)">
 
                         <input type="file" class="form-control" >
-                                    <button (click)="uploadFiles(tipo,estado);">
+                                    <button (click)="uploadFiles(tipo,estado,comentarioAsesor,comentarioEncargado);">
                                         Subir documento
                                     </button>
                     </div>
+                    
+                    <div class="form-group" *ngIf="estado==4">
+                            <label for="exampleFormControlTextarea1">Escribir comentario</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  (change)="setComentarioAsesor(comentario.value)"#comentario></textarea>
+                          </div>
+
                     <div class="hr-line-dashed"></div>
                     <h5>Carpetas</h5>
                     <ul class="folder-list" style="padding: 0">
